--- a/styles/core/base.css
+++ b/styles/core/base.css
@@ -1,24 +1,12 @@
 html{
-  height:100%;
   font-size:16px;
+  tab-size:4;
 }
 
 body{
-  line-height:1.5;
-  min-height:100%;
-  overflow:hidden;
-}
-
-body,button,input,select,textarea{
-  font-family:system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
-}
-
-pre,code{
-  font-family:ui-monospace,Menlo,Consolas,monospace;
-}
-
-pre{
-  margin:0;
+  height:100svh;
+  overflow-y:scroll;
+  overflow-x:auto;
 }
 
 ::-webkit-scrollbar-corner,
@@ -31,8 +19,13 @@ pre{
   cursor:default;
 }
 
-::-webkit-scrollbar-thumb{border-radius:9999px;}
-::-webkit-scrollbar-track{background-color:transparent;}
+::-webkit-scrollbar-thumb{
+  border-radius:9999px;
+}
+
+::-webkit-scrollbar-track{
+  background-color:transparent;
+}
 
 ::-webkit-scrollbar{
   width:0.5rem;
