--- a/styles/core/typography.css
+++ b/styles/core/typography.css
@@ -1,17 +1,41 @@
-h1,h2,h3,h4,h5,h6{
-  margin:0;
-  padding:0;
-  line-height:1.2;
+body{
+  line-height:1.5;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale;
 }
 
-ul,ol{
+body,
+button,
+input,
+select,
+textarea{
+  font-family:system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
+}
+
+pre,
+code{
+  font-family:ui-monospace,Menlo,Consolas,monospace;
+}
+
+pre{
+  margin:0;
+}
+
+ul,
+ol{
   margin:0;
   padding:0;
   padding-inline-start:2rem;
 }
 
 p:last-child{
-  margin-bottom:0;
+  margin-block-end:0;
+}
+
+h1,h2,h3,h4,h5,h6{
+  margin:0;
+  padding:0;
+  line-height:1.2;
 }
 
 h1{font-size:2.5rem;}
