--- a/styles/core/reset.css
+++ b/styles/core/reset.css
@@ -34,7 +34,7 @@ iframe{
   width:100%;
 }
 
-/* remove tap highlight on interactive elements (mobile) */
+/* disable default tap highlight on touch devices */
 a,
 button,
 input,
@@ -51,4 +51,16 @@ textarea,
 [role="menuitemcheckbox"],
 [role="menuitemradio"]{
   -webkit-tap-highlight-color:transparent;
+}
+
+/* normalize button appearance */
+button{
+  background:none;
+  border:none;
+  padding:0;
+}
+
+button::-moz-focus-inner{
+  border:0;
+  padding:0;
 }
