--- a/docs/components/breadcrumb.html
+++ b/docs/components/breadcrumb.html
@@ -1,7 +1,7 @@
-<section class="intro">
+<div>
   <h1>Breadcrumb</h1>
   <p>Breadcrumbs show the current page's location within a navigational hierarchy and allow users to navigate to parent pages.</p>
-</section>
+</div>
 
 <section class="content">
 
