--- a/docs/components/checkbox.html
+++ b/docs/components/checkbox.html
@@ -1,20 +1,20 @@
-<section class="intro">
+<div>
   <h1>Checkbox</h1>
   <p>Checkboxes are used to toggle an option on or off.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Dependencies</h2>
   <p>This component depends on the <a href="#icon">icon</a> component, which is required as part of its functionality.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Attributes</h2>
   <p>aria-label - static (required). If used outside of the <a href="#field">field</a> component, the aria-label must be set manually.</p>
   <p>required - static (optional). Default: false. Indicates whether the component is required.</p>
   <p>checked - reactive (optional). Default: false. Controls the checked state of the component.</p>
   <p>disabled - reactive (optional). Default: false. Controls the disabled state of the component.</p>
-</section>
+</div>
 
 <section class="content">
 
