--- a/docs/components/separator.html
+++ b/docs/components/separator.html
@@ -1,18 +1,18 @@
-<section class="intro">
+<div>
   <h1>Separator</h1>
   <p>A component for visually separating content with a line.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Info</h2>
   <p>This component will become obsolete once <a href="https://www.w3.org/TR/css-gaps-1/" target="_blank">CSS Gaps Decorations Module Level 1</a> is fully implemented across all major browsers.</p>
   <p>Separators default to 100% size along their orientation axis.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Attributes</h2>
   <p>vertical - static. Sets the separator orientation to vertical.</p>
-</section>
+</div>
 
 <section class="content">
 
