--- a/docs/components/spinner.html
+++ b/docs/components/spinner.html
@@ -1,17 +1,17 @@
-<section class="intro">
+<div>
   <h1>Spinner</h1>
   <p>A visual indicator of loading or processing.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Info</h2>
   <p>The spinner is already animated.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Dependencies</h2>
   <p>This component depends on the <a href="#icon">icon</a> component, which is required as part of its functionality.</p>
-</section>
+</div>
 
 <section class="content">
 
