--- a/docs/components/switch.html
+++ b/docs/components/switch.html
@@ -1,15 +1,15 @@
-<section class="intro">
+<div>
   <h1>Switch</h1>
   <p>Switches provide a simple and user-friendly way to toggle between two states.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Attributes</h2>
   <p>aria-label - static (required). If used outside of the <a href="#field">field</a> component, the aria-label must be set manually.</p>
   <p>checked - reactive (required). Default: false. Controls the checked state of the component.</p>
   <p>disabled - reactive (optional). Controls the disabled state of the component.</p>
   <p>required - static (optional). Indicates whether the component is required.</p>
-</section>
+</div>
 
 <section class="content">
 
