--- a/docs/components/button.html
+++ b/docs/components/button.html
@@ -1,9 +1,9 @@
-<section class="intro">
+<div>
   <h1>Button</h1>
   <p>Buttons are used to perform actions or submit forms.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Info</h2>
   <p>This component is designed to work with the <a href="#icon">icon</a> component for rendering icons, but can also be easily adapted to use a standard SVG.</p>
   <p>The component can contain text, icons, or both - in any order.</p>
@@ -13,15 +13,15 @@
   &nbsp;console.log('Button clicked');<br>
   });
   </code></p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Attributes</h2>
   <p>aria-label - static (required). Must be set manually for icon buttons.</p>
   <p>disabled - reactive (optional). Controls the disabled state of the component.</p>
   <p>loading - reactive (optional). Controls the loading state of the component.</p>
   <p>shape - static (optional). Default: rounded. Available options: rounded, pill, square, circle. Sets the corner style.</p>
-</section>
+</div>
 
 <section class="content">
 
