--- a/docs/components/field.html
+++ b/docs/components/field.html
@@ -1,20 +1,20 @@
-<section class="intro">
+<div>
   <h1>Field</h1>
   <p>The Field component groups a label with a form control.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Info</h2>
   <p>Only two components are allowed inside: a ui-label and a form control.</p>
   <p>Automatic association between the label and the form control by adding a unique UUID to the label's id attribute and assigning this UUID to the form control's aria-labelledby attribute. You can override the unique UUID by adding a custom id attribute to the ui-label component.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Attributes</h2>
   <p>label-position - static (optional). Default: start. Defines the position of the ui-label relative to the form control.</p>
   <p>vertical - static (optional). Sets the orientation to vertical.</p>
   <p>required - static (optional). Adds the required attribute to all child elements.</p>
-</section>
+</div>
 
 <section class="content">
 
