--- a/docs/components/icon.html
+++ b/docs/components/icon.html
@@ -1,17 +1,17 @@
-<section class="intro">
+<div>
   <h1>Icon</h1>
   <p>A component for displaying an icon.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Info</h2>
   <p>The SVG uses currentColor.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Attributes</h2>
   <p>name - reactive (required). Specifies the name of the icon to display.</p>
-</section>
+</div>
 
 <section class="content">
   <div class="content-item">
