--- a/docs/components/label.html
+++ b/docs/components/label.html
@@ -1,20 +1,20 @@
-<section class="intro">
+<div>
   <h1>Label</h1>
   <p>A label provides accessible, descriptive text for a user interface control.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Info</h2>
   <p>The component is used in conjunction with a form control and a <a href="#field">field</a>.</p>
   <p>By default, the cursor is set to pointer.</p>
-</section>
+</div>
 
-<section class="details">
+<div>
   <h2>Attributes</h2>
   <p>passive - static (optional). Sets the cursor to default, giving the impression that the element is not interactive.</p>
   <p>required - static (optional). Indicates whether the associated form control is required.</p>
   <p>indicator - static (optional). Default: *. Overrides the default required indicator. The indicator is added only if the 'required' attribute is present. It can be either a single character or a string.</p>
-</section>
+</div>
 
 <section class="content">
 
