--- a/docs/components/alert.html
+++ b/docs/components/alert.html
@@ -5,12 +5,13 @@
 
 <div>
   <h2>Info</h2>
-  <p>A label or text is required to display a meaningful message.</p>
+  <p>A heading or text is required to display a meaningful message.</p>
+  <p>The heading can be any HTML heading element from h2 to h6.</p>
 </div>
 
 <div>
   <h2>Dependencies</h2>
-  <p>This component depends on the <a href="#label">label</a>, <a href="#text">text</a>, and <a href="#icon">icon</a> components, which are required parts of its functionality.</p>
+  <p>This component depends on the <a href="#icon">icon</a> component, which is a required part of its functionality.</p>
 </div>
 
 <div>
@@ -48,7 +49,7 @@
     <div class="example">
       <div class="preview">
         <ui-alert>
-          <h6>Update Complete</h6>
+          <h3>Update Complete</h3>
           <div>Your settings have been successfully saved.</div>
         </ui-alert>
       </div>
@@ -59,7 +60,7 @@
 
 <pre><code>
 &lt;ui-alert&gt;
-  &lt;h6&gt;Update Complete&lt;/h6&gt;
+  &lt;h3&gt;Update Complete&lt;/h3&gt;
   &lt;div&gt;Your settings have been successfully saved.&lt;/div&gt;
 &lt;/ui-alert&gt;
 </code></pre>
@@ -74,7 +75,7 @@
       <div class="preview">
         <ui-alert>
           <ui-icon name="info"></ui-icon>
-          <h6>Update Complete</h6>
+          <h3>Update Complete</h3>
           <div>Your settings have been successfully saved.
   <ul>
     <li>Your settings have</li>
@@ -95,7 +96,7 @@
 <pre><code>
 &lt;ui-alert&gt;
   &lt;ui-icon name="info"&gt;&lt;/ui-icon&gt;
-  &lt;h6&gt;Update Complete&lt;/h6&gt;
+  &lt;h3&gt;Update Complete&lt;/h3&gt;
   &lt;div&gt;Your settings have been successfully saved.&lt;/div&gt;
 &lt;/ui-alert&gt;
 </code></pre>
