--- a/docs/components/accordion.html
+++ b/docs/components/accordion.html
@@ -7,7 +7,7 @@
   <h2>Info</h2>
   <p>The structure must be strictly followed.</p>
   <p>The accordion allows multiple items to be opened.</p>
-  <p>Each heading must be &lt;h2&gt; - &lt;h6&gt; (recommended &lt;h3&gt;) and contain exactly one &lt;button&gt;.</p>
+  <p>The heading can be any HTML heading element from h2 to h6; h3 is recommended.</p>
 </div>
 
 <div>
