--- a/docs/components/alert.html
+++ b/docs/components/alert.html
@@ -5,8 +5,9 @@
 
 <div>
   <h2>Info</h2>
+  <p>The structure must be strictly followed.</p>
   <p>A heading or text is required to display a meaningful message.</p>
-  <p>The heading can be any HTML heading element from h2 to h6.</p>
+  <p>The heading can be any HTML heading element from h2 to h6; h3 is recommended.</p>
 </div>
 
 <div>
