--- a/assets/styles/parts/app.css
+++ b/assets/styles/parts/app.css
@@ -1,3 +1,12 @@
+ui-main{
+  position:relative;
+  display:flex;
+  flex-direction:column;
+  width:100%;
+  padding-inline:20px;
+}
+
+
 body{
   color:var(--theme-text-color);
   background-color:var(--theme-background-color);
