--- a/docs/components/portal.html
+++ b/docs/components/portal.html
@@ -6,7 +6,7 @@
 <div>
   <h2>Info</h2>
   <p>Place just before the closing &lt;/body&gt; tag.</p>
-  <p>Ensures the component is outside the main document flow, avoids z-index conflicts, and guarantees that modals, overlays, and dialogs render above all other content.</p>
+  <p>Avoids z-index conflicts, and guarantees that modals, overlays, and dialogs render above all other content.</p>
 </div>
 
 <section class="content">
