--- a/ui/styles/colors.css
+++ b/ui/styles/colors.css
@@ -1,73 +1,64 @@
 :root{
-  --ui-color-white:oklch(1 0 0);
-  --ui-color-black:oklch(0 0 0);
+  --color-white: oklch(1 0 0);
+  --color-black: oklch(0 0 0);
 
-  --ui-color-neutral-10:oklch(.10 0 0);
-  --ui-color-neutral-20:oklch(.25 0 0);
-  --ui-color-neutral-30:oklch(.35 0 0);
-  --ui-color-neutral-40:oklch(.45 0 0);
-  --ui-color-neutral-50:oklch(.55 0 0);
-  --ui-color-neutral-60:oklch(.65 0 0);
-  --ui-color-neutral-70:oklch(.75 0 0);
-  --ui-color-neutral-80:oklch(.85 0 0);
-  --ui-color-neutral-90:oklch(.95 0 0);
+  --color-neutral-50: oklch(98.5% 0 0);
+  --color-neutral-100: oklch(97% 0 0);
+  --color-neutral-200: oklch(92.2% 0 0);
+  --color-neutral-300: oklch(87% 0 0);
+  --color-neutral-400: oklch(70.8% 0 0);
+  --color-neutral-500: oklch(55.6% 0 0);
+  --color-neutral-600: oklch(43.9% 0 0);
+  --color-neutral-700: oklch(37.1% 0 0);
+  --color-neutral-800: oklch(26.9% 0 0);
+  --color-neutral-900: oklch(20.5% 0 0);
+  --color-neutral-950: oklch(14.5% 0 0);
 
-  --ui-color-neutral-10:oklch(.1 0 0);
-  --ui-color-neutral-15:oklch(.15 0 0);
-  --ui-color-neutral-20:oklch(.2 0 0);
-  --ui-color-neutral-25:oklch(.25 0 0);
-  --ui-color-neutral-30:oklch(.3 0 0);
-  --ui-color-neutral-35:oklch(.35 0 0);
-  --ui-color-neutral-40:oklch(.4 0 0);
-  --ui-color-neutral-45:oklch(.45 0 0);
-  --ui-color-neutral-50:oklch(.5 0 0);
-  --ui-color-neutral-55:oklch(.55 0 0);
-  --ui-color-neutral-60:oklch(.6 0 0);
-  --ui-color-neutral-65:oklch(.65 0 0);
-  --ui-color-neutral-70:oklch(.7 0 0);
-  --ui-color-neutral-75:oklch(.75 0 0);
-  --ui-color-neutral-80:oklch(.8 0 0);
-  --ui-color-neutral-85:oklch(.85 0 0);
-  --ui-color-neutral-90:oklch(.9 0 0);
-  --ui-color-neutral-95:oklch(.95 0 0);
+  --color-red-50: oklch(0.971 0.013 17.38);
+  --color-red-100: oklch(0.936 0.032 17.717);
+  --color-red-200: oklch(0.885 0.062 18.334);
+  --color-red-300: oklch(0.808 0.114 19.571);
+  --color-red-400: oklch(0.704 0.191 22.216);
+  --color-red-500: oklch(0.637 0.237 25.331);
+  --color-red-600: oklch(0.577 0.245 27.325);
+  --color-red-700: oklch(0.505 0.213 27.518);
+  --color-red-800: oklch(0.444 0.177 26.899);
+  --color-red-900: oklch(0.396 0.141 25.723);
+  --color-red-950: oklch(0.258 0.092 26.042);
 
-  --ui-color-red-10:oklch(0.30 0.12 27);
-  --ui-color-red-20:oklch(0.38 0.16 27);
-  --ui-color-red-30:oklch(0.46 0.20 27);
-  --ui-color-red-40:oklch(0.54 0.22 27);
-  --ui-color-red-50:oklch(0.62 0.22 27);
-  --ui-color-red-60:oklch(0.70 0.18 27);
-  --ui-color-red-70:oklch(0.78 0.10 27);
-  --ui-color-red-80:oklch(0.88 0.05 27);
-  --ui-color-red-90:oklch(0.95 0.01 27);
+  --color-green-50: oklch(0.982 0.018 155.826);
+  --color-green-100: oklch(0.962 0.044 156.743);
+  --color-green-200: oklch(0.925 0.084 155.995);
+  --color-green-300: oklch(0.871 0.15 154.449);
+  --color-green-400: oklch(0.792 0.209 151.711);
+  --color-green-500: oklch(0.723 0.219 149.579);
+  --color-green-600: oklch(0.627 0.194 149.214);
+  --color-green-700: oklch(0.527 0.154 150.069);
+  --color-green-800: oklch(0.448 0.119 151.328);
+  --color-green-900: oklch(0.393 0.095 152.535);
+  --color-green-950: oklch(0.266 0.065 152.934);
 
-  --ui-color-green-10:oklch(0.30 0.10 148);
-  --ui-color-green-20:oklch(0.38 0.14 148);
-  --ui-color-green-30:oklch(0.46 0.17 148);
-  --ui-color-green-40:oklch(0.54 0.19 148);
-  --ui-color-green-50:oklch(0.62 0.18 148);
-  --ui-color-green-60:oklch(0.70 0.15 148);
-  --ui-color-green-70:oklch(0.78 0.10 148);
-  --ui-color-green-80:oklch(0.88 0.05 148);
-  --ui-color-green-90:oklch(0.95 0.01 148);
+  --color-blue-50: oklch(0.97 0.014 254.604);
+  --color-blue-100: oklch(0.932 0.032 255.585);
+  --color-blue-200: oklch(0.882 0.059 254.128);
+  --color-blue-300: oklch(0.809 0.105 251.813);
+  --color-blue-400: oklch(0.707 0.165 254.624);
+  --color-blue-500: oklch(0.623 0.214 259.815);
+  --color-blue-600: oklch(0.546 0.245 262.881);
+  --color-blue-700: oklch(0.488 0.243 264.376);
+  --color-blue-800: oklch(0.424 0.199 265.638);
+  --color-blue-900: oklch(0.379 0.146 265.522);
+  --color-blue-950: oklch(0.282 0.091 267.935);
 
-  --ui-color-blue-10:oklch(0.30 0.15 252);
-  --ui-color-blue-20:oklch(0.38 0.20 252);
-  --ui-color-blue-30:oklch(0.46 0.22 252);
-  --ui-color-blue-40:oklch(0.54 0.25 252);
-  --ui-color-blue-50:oklch(0.62 0.24 252);
-  --ui-color-blue-60:oklch(0.70 0.15 252);
-  --ui-color-blue-70:oklch(0.78 0.10 252);
-  --ui-color-blue-80:oklch(0.88 0.04 252);
-  --ui-color-blue-90:oklch(0.95 0.01 252);
-
-  --ui-color-yellow-10:oklch(0.30 0.08 83);
-  --ui-color-yellow-20:oklch(0.38 0.12 83);
-  --ui-color-yellow-30:oklch(0.46 0.15 83);
-  --ui-color-yellow-40:oklch(0.54 0.16 83);
-  --ui-color-yellow-50:oklch(0.62 0.16 83);
-  --ui-color-yellow-60:oklch(0.70 0.12 83);
-  --ui-color-yellow-70:oklch(0.78 0.08 83);
-  --ui-color-yellow-80:oklch(0.88 0.04 83);
-  --ui-color-yellow-90:oklch(0.95 0.01 83);
+  --color-yellow-50: oklch(0.987 0.026 102.212);
+  --color-yellow-100: oklch(0.973 0.071 103.193);
+  --color-yellow-200: oklch(0.945 0.129 101.54);
+  --color-yellow-300: oklch(0.905 0.182 98.111);
+  --color-yellow-400: oklch(0.852 0.199 91.936);
+  --color-yellow-500: oklch(0.795 0.184 86.047);
+  --color-yellow-600: oklch(0.681 0.162 75.834);
+  --color-yellow-700: oklch(0.554 0.135 66.442);
+  --color-yellow-800: oklch(0.476 0.114 61.907);
+  --color-yellow-900: oklch(0.421 0.095 57.708);
+  --color-yellow-950: oklch(0.286 0.066 53.813);
 }
